# PromptProbe

./: README.md  pyproject.toml  run_tester.py
configs/: gemini_target.json  hardened_support_bot.json  http_target_template.json  openai_responses_target.json  vulnerable_support_bot.json
examples/: __init__.py  demo_targets.py  gemini_adapter.py  http_adapter.py  openai_adapter.py
reports/: gemini_api_target__baseline_prompt_injection_suite.csv  gemini_api_target__baseline_prompt_injection_suite.html  gemini_api_target__baseline_prompt_injection_suite.json  hardened_support_bot__advanced_prompt_injection_suite.csv  hardened_support_bot__advanced_prompt_injection_suite.html  hardened_support_bot__advanced_prompt_injection_suite.json  hardened_support_bot__baseline_prompt_injection_suite.html  hardened_support_bot__baseline_prompt_injection_suite.json  vulnerable_support_bot__advanced_prompt_injection_suite.csv  vulnerable_support_bot__advanced_prompt_injection_suite.html  vulnerable_support_bot__advanced_prompt_injection_suite.json  vulnerable_support_bot__baseline_prompt_injection_suite.html  vulnerable_support_bot__baseline_prompt_injection_suite.json
src/llm_prompt_injection_tester.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/pi_tester/: __init__.py  cli.py  loader.py  models.py  reporting.py  runner.py  scoring.py
suites/: advanced_prompt_injection.json  baseline_prompt_injection.json
